--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "server-template",
   "version": "1.0.0",
+  "private": true,
   "description": "Simple express server with sequelize, pg and jwts",
   "main": "index.js",
   "scripts": {
-    "start": "node .",
+    "start": "node index.js",
     "dev": "env DELAY=1000 npx nodemon .",
     "initdev": "npm run createDB && npm run migrate && npm run seed",
     "migrate": "npx sequelize-cli db:migrate",
@@ -34,6 +35,15 @@
   },
   "devDependencies": {
     "axios": "^0.19.2",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "express": "3.1.1",
+    "mysql": "^2.15.0",
+    "pg": "^7.4.3",
+    "sequelize": "^4.38.0",
+    "sequelize-cli": "^4.0.0"
+  },
+  "engines": {
+    "node": "*",
+    "npm": "*"
   }
 }
