--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "morgan": "^1.9.1",
     "mysql": "^2.15.0",
     "pg": "^7.18.2",
-    "sequelize": "^5.21.5",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.8",
     "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
